mcMMO -> All changes up to 0.6.2 vStopFire -> All changes up to 1.1 WoolPlus -> All changes up to 1.2 vPlayersOnline -> All changes up to 1.5

--- a/vPlayersOnline/plugin.yml
+++ b/vPlayersOnline/plugin.yml
@@ -1,3 +1,3 @@
 name: vPlayersOnline
-main: com.bukkit.nossr50.vPlayersOnline.vPlayersOnline
-version: 1.3
+main: com.gmail.nossr50.vPlayersOnline.vPlayersOnline
+version: 1.5
