--- a/mcMMO/plugin.yml
+++ b/mcMMO/plugin.yml
@@ -1,8 +1,10 @@
 name: mcMMO
 main: com.gmail.nossr50.mcMMO
-version: 1.1.05
+version: 1.1.06
 softdepend: [Spout]
 commands:
+    mchud:
+        description: Change your HUD
     xplock:
         description: Lock your xp bar
     xprate:
