--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: mcMMO
 main: com.gmail.nossr50.mcMMO
-version: 1.1.17
+version: 1.2.00 WIP #1
 softdepend: [Spout]
 author: nossr50
 description: mcMMO takes core Minecraft game mechanics and expands them to add an extensive RPG experience, the goal of the project has always been a quality RPG experience. Everything in mcMMO is carefully thought out and is constantly improving. mcMMO adds eleven skills to train in and level in, while also offering a high level of customization for server admins. There are countless features, including custom sounds, graphical elements, and more added when running mcMMO in conjunction with Spout. I carefully read feedback and evaluate the mechanics of mcMMO in every update to provide an ever-evolving experience.
@@ -196,8 +196,9 @@ permissions:
     mcmmo.skills.*:
         description: Implies all mcmmo.skills permissions.
         children:
-            mcmmo.skills.sorcery.*: true 
-            mcmmo.skills.curative.*: true 
+            mcmmo.skills.alchemy: true
+            mcmmo.skills.enchanting: true
+            mcmmo.skills.fishing: true
             mcmmo.skills.taming: true 
             mcmmo.skills.mining: true 
             mcmmo.skills.woodcutting: true 
@@ -209,30 +210,6 @@ permissions:
             mcmmo.skills.swords: true 
             mcmmo.skills.axes: true 
             mcmmo.skills.acrobatics: true
-    mcmmo.skills.sorcery.*:
-        description: Implies all mcmmo.skills.sorcery permissions.
-        children:
-            mcmmo.skills.sorcery: true 
-            mcmmo.skills.sorcery.water: true 
-            mcmmo.skills.sorcery.water.thunder: true 
-    mcmmo.skills.curative.*:
-        description: Implies all mcmmo.skills.curative permissions.
-        children:
-            mcmmo.skills.curative: true 
-            mcmmo.skills.curative.heal.other: true 
-            mcmmo.skills.curative.heal.self: true     
-    mcmmo.skills.sorcery:
-        description:
-    mcmmo.skills.sorcery.water:
-        description:
-    mcmmo.skills.sorcery.water.thunder:
-        description:    
-    mcmmo.skills.curative:
-        description:
-    mcmmo.skills.curative.heal.other:
-        description:
-    mcmmo.skills.curative.heal.self:
-        description:    
     mcmmo.skills.taming:
         description:
     mcmmo.skills.mining:
