We weren't including the wave files at build

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
                 <directory>${basedir}/src/main/resources/</directory>
                 <includes>
                     <include>*.png</include>
+                    <include>*.wav</include>
                 </includes>
             </resource>
         </resources>
