Events + Alias (not really fix) fix Changed Bukkit events to new event system Changed aliasing to send both the mcmmo command and the command used.

--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
         </dependency>
         <dependency>
             <groupId>org.getspout</groupId>
-            <artifactId>spoutplugin</artifactId>
+            <artifactId>spoutpluginapi</artifactId>
             <version>dev-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
