--- a/pom.xml
+++ b/pom.xml
@@ -107,14 +107,14 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.1-R1</version>
+            <version>1.1-R3-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.1-R1</version>
+            <version>1.1-R2</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
