--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>bukkit-1.1-R4-20120130.090521-1</version>
+            <version>1.1-R4-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
