--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gmail.nossr50.mcMMO</groupId>
     <artifactId>mcMMO</artifactId>
-    <version>1.2.10</version>
+    <version>2.0-dev</version>
     <name>mcMMO</name>
     <url>https://github.com/TheYeti/mcMMO</url>
     <issueManagement>
