Make Smooth Brick to Mossy Brick and Dirt to Grass for green thumb configurable
Closes issue #120

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -119,6 +119,8 @@ Skills:
         Level_Cap: 0
         Green_Thumb:
             Cobble_To_Mossy: true
+            SmoothBrick_To_MossyBrick: true
+            Dirt_To_Grass: true
     Mining:
         Level_Cap: 0
         Requires_Pickaxe: true
