--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -259,6 +259,8 @@ General:
         Enabled: true
     #Amount of time (in minutes) to wait between saves of player information
     Save_Interval: 10
+    #Allow mcMMO to report on basic anonymous useage
+    Stats_Tracking: true
 Excavation:
     Drops:
         Cake: true
