Updated config.yml to include new mining items.
Not sure how this got missed before now...

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -232,6 +232,10 @@ Experience:
         Coal: 100
         Diamond: 750
         Iron: 250
+        Nether_Brick: 30
+        End_Stone: 150
+        Moss_Stone: 30
+        Stone_Brick: 30
 MySQL:
     Enabled: false
     Database:
