--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}-b${BUILD_NUMBER}
 softdepend: [Spout]
 authors:
   - TheYeti
+  - nossr50
   - NuclearW
   - gmcferrin
 description: mcMMO takes core Minecraft game mechanics and expands them to add an extensive RPG experience, the goal of the project has always been a quality RPG experience. Everything in mcMMO is carefully thought out and is constantly improving. mcMMO adds eleven skills to train in and level in, while also offering a high level of customization for server admins. There are countless features, including custom sounds, graphical elements, and more added when running mcMMO in conjunction with Spout. I carefully read feedback and evaluate the mechanics of mcMMO in every update to provide an ever-evolving experience.
@@ -105,9 +106,7 @@ permissions:
         description: mcmmo permisions that default to true
         children:
             mcmmo.ability.*: true 
-            mcmmo.item.*: true 
-            mcmmo.tools.*: true 
-            mcmmo.regeneration: true 
+            mcmmo.item.*: true   
             mcmmo.motd: true 
             mcmmo.commands.*: true 
             mcmmo.chat.partychat: true 
