--- a/pom.xml
+++ b/pom.xml
@@ -121,5 +121,5 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <version>1.2.12</version>
+    <version>2.0.00-dev</version>
 </project>
