Re-added event calling Re-added other dealDamage methods Added FakeEntityDamageByEntityEvent for us to filter our own mess out, this was the issue with Skull Splitter and Serrated Strikes earlier (a loop) Moved FakeBlockBreakEvent to be with other events Added configuration option to control event calling Learned how to changelog Broke those cuffs

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -265,6 +265,8 @@ General:
     Save_Interval: 10
     #Allow mcMMO to report on basic anonymous usage
     Stats_Tracking: true
+    #Allow mcMMO to inform other plugins of damage being dealt
+    Event_Callback: true
 Excavation:
     Drops:
         Cake: true
