Added option to disable Herbalism hunger bonuses

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -121,6 +121,7 @@ Skills:
             Cobble_To_Mossy: true
             SmoothBrick_To_MossyBrick: true
             Dirt_To_Grass: true
+        Hunger_Bonus: true
     Mining:
         Level_Cap: 0
         Requires_Pickaxe: true
